// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar: should write sidebar with default ('api') out 1`] = `
"module.exports = [
  \\"api/index\\",
  \\"api/globals\\",
  {
    \\"type\\": \\"category\\",
    \\"label\\": \\"Modules\\",
    \\"items\\": [
      \\"api/modules/_theme_\\"
    ]
  },
  {
    \\"type\\": \\"category\\",
    \\"label\\": \\"Classes\\",
    \\"items\\": [
      \\"api/classes/_theme_.classa\\",
      \\"api/classes/_theme_.classb\\"
    ]
  },
  {
    \\"type\\": \\"category\\",
    \\"label\\": \\"Interfaces\\",
    \\"items\\": [
      \\"api/interfaces/_theme_.interfacea\\",
      \\"api/interfaces/_theme_.interfaceb\\"
    ]
  }
];"
`;

exports[`Sidebar: should write sidebar with root ('') out 1`] = `
"module.exports = [
  \\"index\\",
  \\"globals\\",
  {
    \\"type\\": \\"category\\",
    \\"label\\": \\"Modules\\",
    \\"items\\": [
      \\"modules/_theme_\\"
    ]
  },
  {
    \\"type\\": \\"category\\",
    \\"label\\": \\"Classes\\",
    \\"items\\": [
      \\"classes/_theme_.classa\\",
      \\"classes/_theme_.classb\\"
    ]
  },
  {
    \\"type\\": \\"category\\",
    \\"label\\": \\"Interfaces\\",
    \\"items\\": [
      \\"interfaces/_theme_.interfacea\\",
      \\"interfaces/_theme_.interfaceb\\"
    ]
  }
];"
`;
